# rudevil

./: Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain
.github/: CODEOWNERS  pr-title-checker-config.json
.github/workflows/: tests-unit.yaml
src/: main.rs
src/notifications/: desktop.rs
systemd/: rudevil.service
